content/vault/v1.10.x/content/docs/deprecation/index.mdx
---
layout: docs
page_title: Feature Deprecation Notice
sidebar_title: Feature Deprecation Notice and Plans
description: |-
  An announcement page to communicate feature deprecations and plans.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2025-07-02T11:43:42-05:00
last_modified: 2025-07-25T10:39:53-07:00
# END AUTO GENERATED METADATA
---

# Feature Deprecation Notice and Plans

This announcement page is maintained and updated periodically to communicate important decisions made concerning End of Support(EoS) for Vault features as well as features we have removed or disabled from the product. We document the removal of features, enable the community with a plan and timeline for eventual deprecations, and supply alternative paths to explore and evaluate to minimize business disruptions. If you have questions or concerns about a deprecated feature, please create a topic on [the community forum](https://discuss.hashicorp.com/c/vault/30) or raise a ticket with your support team. Please refer to the [FAQ](/vault/docs/deprecation/faq) page for frequently asked questions concerning Vault feature deprecations.

**Deprecation Announcement**: This indicates the release version during which the announcement was made to deprecate a feature.

**End of Support**: This indicates when a deprecated feature becomes unsupported. Consult the table below and consider the timeline provided to upgrade. If you use Vault Enterprise and require help with a deprecated feature, the Vault Support Team will provide limited support. However, we will not provide software patches or bug fixes. Refer to the [HashiCorp Support Policy](https://support.hashicorp.com/hc/en-us/articles/360021185113-Support-Period-and-End-of-Life-EOL-Policy) to understand our product support timeline.

**Feature Removal**: This indicates that the feature is completely removed/disabled from the product.

~> **Note**: All specified targeted version announcements for End of Support and Feature Removal may be subject to change.

| Feature                                           | Deprecation announcement | End of Support | Feature Removal | Migration Path/Impact                                                                                                                                                                                                                                                                                                                              | Resources                                                                                                                                                                                                                                                        |
| ------------------------------------------------- | ------------------------ | -------------- | --------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| Etcd V2 API (OSS)                 | v1.9                     | N/A            | v1.10           | The Etcd v2 has been deprecated with the release of Etcd v3.5, and will be decomissioned by Etcd v3.6. Etcd v2 API has been removed in Vaut 1.10. Users of Etcd storage backend must migrate Vault storage to an Etcd V3 cluster prior to upgrading to Vault 1.10. All storage migrations should be backed up prior to migration.                  | [Etcd Storage Backend](/vault/docs/configuration/storage/etcd)                                                                                                                                                                                                         |
| Licenses in storage (ENT)         | v1.8                     | v1.10          | v1.11           | Migrate to [Autoloading](/vault/docs/enterprise/license/autoloading) by v1.11.                                                                                                                                                                                                                                                                           | [Vault License](/vault/docs/enterprise/license) [System Backend](https://www.vaultproject.io/api-docs/system/license) [FAQ](/vault/docs/enterprise/license/faq)                                                                                                              |
| Mount Filters (ENT)              | v1.3                     | v1.10          | v1.11           | Use the alternative feature: [Path Filters](https://www.vaultproject.io/api-docs/system/replication/replication-performance#create-paths-filter)                                                                                                                                                                                                   | [API Deprecation Notice](https://www.vaultproject.io/api-docs/system/replication/replication-performance#create-mounts-filter-deprecated) [Filter Mount Replication Deprecation Notice](/vault/docs/upgrading/upgrade-to-1.3.0#filtered-mount-replication-deprecation) |
| Legacy MFA (OSS)                 | v1.0                     | N/A            | v1.11           | Based on your use case, use the Policy-based Enterprise MFA or Login MFA supported in Vault OSS as of v1.10                                                                                                                                                                                                                                        | [Multi-Factor Authentication](https://www.vaultproject.io/docs/v1.10.x/auth/mfa)                                                                                                                                                                                                                    |
| *****Standalone DB Engines (OSS)      | v0.8                     | N/A            | v1.13           | Use the alternative DB secrets engine feature                                                                                                                                                                                                                                                                                                      | [DB secrets engine](/vault/docs/secrets/databases)                                                                                                                                                                                                                     |
| *****AppID (OSS)                      | v0.6                     | N/A            | v1.13           | Use the alternative feature: [AppRole auth method](https://www.vaultproject.io/docs/auth/approle)                                                                                                                                                                                                                                                  | [AppID Auth Method Deprecation Notice](/vault/docs/auth/app-id)                                                                                                                                                                                                        |
| AAD Graph on Azure Secrets Engine | v1.10                    | 1.11           | v1.12           | Microsoft will end its support of the [AAD Graph API on June 30, 2022](https://docs.microsoft.com/en-us/graph/migrate-azure-ad-graph-overview). Support for Microsoft Graph API was introduced in Vault 1.9. If your Vault deployment is on a prior release, you may use the Azure Secrets Engine as an external plugin while you plan to upgrade. | [AAD (Azure Active Directory](https://vault-git-post-1-10-doc-changes-hashicorp.vercel.app/docs/secrets/azure#aad-azure-active-directory)                                                                                                                        |
| Optional `api_token` parameter in Okta Auth Method  | v1.4                    | 1.11           | v1.12           | The `api_token` parameter on the Okta Auth Method will change from being optional to being required. | [API Documentation](https://www.vaultproject.io/api-docs/auth/okta#api_token) |

*If you use **Standalone DB Engines** or **AppID (OSS)**, you should actively plan to migrate away from their usage. If you use these features and upgrade to Release 1.12, Vault will log error messages and shut down, and any attempts to add new mounts will result in an error.
If you are still using these deprecated features and attempt to upgrade to 1.13 (the target feature removal timeframe), you will not be able to start up Vault without downgrading and migrating away from these features.
